[gd_scene load_steps=14 format=2]

[ext_resource path="res://games/FlowerLab/index.gd" type="Script" id=1]
[ext_resource path="res://games/FlowerLab/Sprites/Dark15.png" type="Texture" id=2]
[ext_resource path="res://games/FlowerLab/Scripts/Background.gd" type="Script" id=3]
[ext_resource path="res://games/FlowerLab/Scripts/Spawn.gd" type="Script" id=4]
[ext_resource path="res://games/FlowerLab/Scripts/EventManager.gd" type="Script" id=5]
[ext_resource path="res://games/FlowerLab/Audio/bass background.wav" type="AudioStream" id=6]
[ext_resource path="res://games/FlowerLab/Scripts/SoundManager.gd" type="Script" id=7]
[ext_resource path="res://games/FlowerLab/Audio/collision sound.wav" type="AudioStream" id=8]
[ext_resource path="res://games/FlowerLab/Audio/hit1.wav" type="AudioStream" id=9]
[ext_resource path="res://games/FlowerLab/Audio/Explosion1.wav" type="AudioStream" id=10]
[ext_resource path="res://games/FlowerLab/Audio/chip_damage.wav" type="AudioStream" id=11]
[ext_resource path="res://games/FlowerLab/GUI.gd" type="Script" id=12]
[ext_resource path="res://games/FlowerLab/DreadNoughtSpawn.gd" type="Script" id=13]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
modulate = Color( 0.239216, 0.239216, 0.239216, 1 )
position = Vector2( -745.256, 982.458 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
script = ExtResource( 3 )

[node name="Players" type="Node2D" parent="."]

[node name="Positions" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="Positions"]
position = Vector2( 384, 800 )

[node name="Position2D2" type="Position2D" parent="Positions"]
position = Vector2( 768, 800 )

[node name="Position2D3" type="Position2D" parent="Positions"]
position = Vector2( 1152, 800 )

[node name="Position2D4" type="Position2D" parent="Positions"]
position = Vector2( 1536, 800 )

[node name="SpawnCenter" type="Position2D" parent="Positions"]
position = Vector2( 960, 0 )

[node name="EndTimer" type="Timer" parent="."]
wait_time = 300.0
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -26.5
margin_top = -7.0
margin_right = 26.5
margin_bottom = 7.0
rect_scale = Vector2( 10, 10 )
rect_pivot_offset = Vector2( 26, 7 )
text = "Termin√≥"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundManager" type="Node" parent="."]
script = ExtResource( 7 )

[node name="Music" type="Node" parent="SoundManager"]

[node name="SFX" type="Node" parent="SoundManager"]

[node name="playerCollision" type="AudioStreamPlayer" parent="SoundManager/SFX"]
stream = ExtResource( 8 )

[node name="playerDeath" type="AudioStreamPlayer" parent="SoundManager/SFX"]
stream = ExtResource( 10 )

[node name="playerDeath2" type="AudioStreamPlayer" parent="SoundManager/SFX"]
stream = ExtResource( 9 )

[node name="chipDamage" type="AudioStreamPlayer" parent="SoundManager/SFX"]
stream = ExtResource( 11 )

[node name="Environment" type="Node" parent="SoundManager"]

[node name="VacuumStart" type="AudioStreamPlayer" parent="SoundManager/Environment"]
stream = ExtResource( 6 )

[node name="Spawn" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="Timer" type="Timer" parent="Spawn"]
wait_time = 2.0
one_shot = true

[node name="EventManager" type="Node" parent="."]
script = ExtResource( 5 )

[node name="customTimer" type="Timer" parent="EventManager"]
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 1021.19, 606.331 )
zoom = Vector2( 2, 2 )

[node name="DreadNoughtSpawn" type="Node2D" parent="."]
script = ExtResource( 13 )

[node name="GUI" type="Control" parent="."]
margin_left = 2.08752
margin_right = 2.08752
script = ExtResource( 12 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}
alarm_speed = 0.05

[node name="MarginContainer" type="MarginContainer" parent="GUI"]
margin_right = 1920.0
margin_bottom = 1080.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/MarginContainer"]
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/MarginContainer/HBoxContainer"]
margin_right = 173.0
margin_bottom = 1080.0
size_flags_horizontal = 3

[node name="supIzq" type="ColorRect" parent="GUI/MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 173.0
margin_bottom = 357.0
size_flags_vertical = 3
color = Color( 0, 0, 0, 1 )

[node name="centIzq" type="ColorRect" parent="GUI/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 361.0
margin_right = 173.0
margin_bottom = 718.0
size_flags_vertical = 3
color = Color( 0, 0, 0, 1 )

[node name="infIzq" type="ColorRect" parent="GUI/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 722.0
margin_right = 173.0
margin_bottom = 1080.0
size_flags_vertical = 3
color = Color( 0, 0, 0, 1 )

[node name="VBoxContainer3" type="VBoxContainer" parent="GUI/MarginContainer/HBoxContainer"]
margin_left = 177.0
margin_right = 1741.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 9.0

[node name="supCent" type="ColorRect" parent="GUI/MarginContainer/HBoxContainer/VBoxContainer3"]
margin_right = 1564.0
margin_bottom = 56.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
color = Color( 0, 0, 0, 1 )

[node name="gameplay" type="VBoxContainer" parent="GUI/MarginContainer/HBoxContainer/VBoxContainer3"]
margin_top = 60.0
margin_right = 1564.0
margin_bottom = 1019.0
size_flags_vertical = 3
size_flags_stretch_ratio = 8.5

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/MarginContainer/HBoxContainer/VBoxContainer3"]
margin_top = 1023.0
margin_right = 1564.0
margin_bottom = 1080.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="FirstPlayer" type="ColorRect" parent="GUI/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer"]
margin_right = 388.0
margin_bottom = 57.0
size_flags_horizontal = 3
color = Color( 0, 0, 0, 1 )

[node name="Score" type="RichTextLabel" parent="GUI/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/FirstPlayer"]
margin_right = 163.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 10.11
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SecondPlayer" type="ColorRect" parent="GUI/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer"]
margin_left = 392.0
margin_right = 780.0
margin_bottom = 57.0
size_flags_horizontal = 3
color = Color( 0, 0, 0, 1 )

[node name="Score" type="RichTextLabel" parent="GUI/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/SecondPlayer"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ThirdPlayer" type="ColorRect" parent="GUI/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer"]
margin_left = 784.0
margin_right = 1172.0
margin_bottom = 57.0
size_flags_horizontal = 3
color = Color( 0, 0, 0, 1 )

[node name="Score" type="RichTextLabel" parent="GUI/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/ThirdPlayer"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FourthPlayer" type="ColorRect" parent="GUI/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer"]
margin_left = 1176.0
margin_right = 1564.0
margin_bottom = 57.0
size_flags_horizontal = 3
color = Color( 0, 0, 0, 1 )

[node name="Score" type="RichTextLabel" parent="GUI/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/FourthPlayer"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="GUI/MarginContainer/HBoxContainer"]
margin_left = 1745.0
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3

[node name="supDer" type="ColorRect" parent="GUI/MarginContainer/HBoxContainer/VBoxContainer2"]
margin_right = 175.0
margin_bottom = 357.0
size_flags_vertical = 3
color = Color( 0, 0, 0, 1 )

[node name="centDer" type="ColorRect" parent="GUI/MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 361.0
margin_right = 175.0
margin_bottom = 718.0
size_flags_vertical = 3
color = Color( 0, 0, 0, 1 )

[node name="infDer" type="ColorRect" parent="GUI/MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 722.0
margin_right = 175.0
margin_bottom = 1080.0
size_flags_vertical = 3
color = Color( 0, 0, 0, 1 )

[node name="pulse_timer" type="Timer" parent="GUI"]
one_shot = true
[connection signal="timeout" from="EndTimer" to="." method="_on_timeout"]
[connection signal="finished" from="SoundManager/Environment/VacuumStart" to="SoundManager" method="_auto_play_environment"]
[connection signal="timeout" from="Spawn/Timer" to="Spawn" method="_on_Timer_timeout"]
[connection signal="array_placed_asteroids" from="EventManager" to="Spawn" method="_on_EventManager_array_placed_asteroids"]
[connection signal="delete_dreadnought" from="EventManager" to="DreadNoughtSpawn" method="_on_delete"]
[connection signal="halt_asteroids" from="EventManager" to="Spawn" method="_on_EventManager_halt_asteroids"]
[connection signal="move_dreadnought_to" from="EventManager" to="DreadNoughtSpawn" method="_on_move_to"]
[connection signal="normal_random_asteroids" from="EventManager" to="Spawn" method="_on_EventManager_normal_random_asteroids"]
[connection signal="place_asteroids" from="EventManager" to="Spawn" method="_on_EventManager_place_asteroids"]
[connection signal="restart_asteroids" from="EventManager" to="Spawn" method="_on_EventManager_restart_asteroids"]
[connection signal="set_asteroid_speed" from="EventManager" to="Spawn" method="_on_EventManager_set_asteroid_speed"]
[connection signal="set_dreadnought_light_energy" from="EventManager" to="DreadNoughtSpawn" method="_on_set_light_energy"]
[connection signal="set_dreadnought_scale" from="EventManager" to="DreadNoughtSpawn" method="_on_set_scale"]
[connection signal="set_laser_pattern" from="EventManager" to="DreadNoughtSpawn" method="_on_set_pattern"]
[connection signal="set_laser_pattern_time" from="EventManager" to="DreadNoughtSpawn" method="_on_set_laser_pattern_time"]
[connection signal="set_laser_speed" from="EventManager" to="DreadNoughtSpawn" method="_on_set_laser_speed"]
[connection signal="set_laser_time" from="EventManager" to="DreadNoughtSpawn" method="_on_set_laser_time"]
[connection signal="simetric_placed_asteroids" from="EventManager" to="Spawn" method="_on_EventManager_simetric_placed_asteroids"]
[connection signal="simetric_random_asteroids" from="EventManager" to="Spawn" method="_on_EventManager_simetric_random_asteroids"]
[connection signal="spawn_dreadnought" from="EventManager" to="DreadNoughtSpawn" method="_on_spawn_dreadnought"]
[connection signal="start_dreadnought_lasers" from="EventManager" to="DreadNoughtSpawn" method="_on_start_lasers"]
[connection signal="stop_dreadnought_lasers" from="EventManager" to="DreadNoughtSpawn" method="_on_stop_lasers"]
[connection signal="timeout" from="EventManager/customTimer" to="EventManager" method="_its_timeout"]
[connection signal="timeout" from="GUI/pulse_timer" to="GUI" method="_on_end_pulse"]
